// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel component active non-removable 1`] = `
<li
  className="list-group-item d-flex justify-content-between pr-3 channel active"
  onClick={undefined}
>
  general
  <div
    className="options d-flex"
  >
    <span
      className="rename"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</li>
`;

exports[`channel component active removable 1`] = `
<li
  className="list-group-item d-flex justify-content-between pr-3 channel active"
  onClick={undefined}
>
  general
  <div
    className="options d-flex"
  >
    <span
      className="rename"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
    <span
      className="delete ml-2"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</li>
`;

exports[`channel component non-active non-removable 1`] = `
<li
  className="list-group-item d-flex justify-content-between pr-3 channel"
  onClick={undefined}
>
  general
  <div
    className="options d-flex"
  >
    <span
      className="rename"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</li>
`;

exports[`channel component non-active removable 1`] = `
<li
  className="list-group-item d-flex justify-content-between pr-3 channel"
  onClick={undefined}
>
  general
  <div
    className="options d-flex"
  >
    <span
      className="rename"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
    <span
      className="delete ml-2"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</li>
`;
